Latest build deployed.

--- a/knowl/fn-1-hidden.html
+++ b/knowl/fn-1-hidden.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
