--- a/knowl/fn-1.html
+++ b/knowl/fn-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
@@ -13,10 +13,10 @@
 <body class="ignore-math">
 <div class="fn">
 <h2 class="heading">
-<span class="type">[fn]</span><span class="space"> </span><span class="codenumber">0.0.1</span><span class="period">.</span>
+<span class="type">پەراوێز</span><span class="space"> </span><span class="codenumber">0.0.1</span><span class="period">.</span>
 </h2>
 <code class="code-inline tex2jax_ignore">creativecommons.org/licenses/by-sa/4.0</code>
 </div>
-<span class="incontext"><a href="colophon-1.html#fn-1" class="internal">[incontext]</a></span>
+<span class="incontext"><a href="colophon-1.html#fn-1" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
