--- a/knowl/p-10.html
+++ b/knowl/p-10.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
@@ -11,8 +11,10 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h2 class="heading"><span class="type">[p]</span></h2>
-<div class="para">ئەم کتێبە لەڕێگای PreTeXt دروستکراوە.</div>
-<span class="incontext"><a href="colophon-2.html#p-10" class="internal">[incontext]</a></span>
+<h3 class="heading"><span class="type">پەرەگراف</span></h3>
+<div class="para"><article class="definition definition-like"><h3 class="heading">
+<span class="type">پێناسە</span><span class="space"> </span><span class="codenumber">1.2.1</span><span class="period">.</span>
+</h3>یه‌كبه‌دوای یه‌كی فیبانۆشی (fibonacci sequence) بریتیه‌ له‌ زنجیره‌یه‌ك له‌ ژماره‌ كه‌ هه‌ر ژماره‌یه‌ك له‌م زنجیره‌یه‌ ده‌كاته‌ كۆی دوو ژماره‌كه‌ی پێشخۆی.. له‌خواره‌وه‌ ده‌یه‌كه‌مین دانه‌كانی ئه‌م یه‌كله‌دوای یه‌كه‌ ده‌نووسین:-</article></div>
+<span class="incontext"><a href="S-1-2.html#p-10" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
