--- a/knowl/p-4.html
+++ b/knowl/p-4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">[p]</span></h4>
+<h4 class="heading"><span class="type">پەرەگراف</span></h4>
 <div class="para">. گه‌ر كه‌سێك له‌بیركاری كه‌مێك شاره‌زا نه‌بێت  و ئه‌م پێناسه‌یه‌ی سه‌ره‌وه‌ی بۆ بخوێنیته‌وه‌ ، له‌وانیه‌ واهه‌ستبكات گاڵته‌ی له‌گه‌ل ده‌كه‌یت یاخود نوكته‌ی بۆ ده‌ڵێت { ناهه‌قیشی نیه‌)  ، چونكه‌ له‌ پێناسه‌كه‌ی سه‌ره‌وه‌ هه‌ستده‌كه‌یت گه‌مه‌كردنێك هه‌یه‌ به‌ ووشه‌ { وه‌كو ئه‌وه‌ وایه‌ كه‌سێك پێناسه‌ی شتیكی بۆن ناخۆشت بۆ بكات و  بڵێت هه‌ر شتێك  بۆنی خۆش نه‌بێت ئه‌وا ناخۆشه‌ !}. به‌هه‌رحاڵ ، بۆ ئێمه‌ی بیركاریزان ئه‌م جۆره‌ پێناسانه‌ زۆر ئاسایین و له‌سه‌رجه‌م ئه‌ده‌بیاتی بیركاریدا به‌ئاشكرا بوونی هه‌یه‌ و ڕاهاتووین له‌گه‌ڵی. با بگه‌رێنه‌وه‌ بۆ پێناسه‌كه‌ كه‌ باسی ژماره‌یی  ڕێژه‌یی  مان كردووه‌، كه‌واته‌ بۆ تێگه‌یشتن له‌ ژماره‌ی ناڕێژه‌یی ده‌بێت سه‌ره‌تا باس له‌ژماره‌ی ڕێژه‌یی بكه‌یت، وه‌ هه‌ڵبه‌ت له‌ڕووی مێژوویشه‌وه‌ ئه‌مه‌ گونجاوه‌، چونكه‌ مێژووی دروستبوونی ژماره‌ی ڕێژه‌یی ده‌كه‌وێته‌ پێش مێژووی له‌دایكبوونی ژماره‌ ناڕێژه‌یه‌كان، وه‌ له‌دایكبوونه‌كه‌یشی زه‌حمه‌تی زۆری پێوه‌كێشرا ( به‌لایه‌نی كه‌مه‌وه‌ نه‌فه‌رێك له‌سه‌ر ژماره‌ ناڕێژه‌یه‌كان كوژرا). پێناسه‌ی ژماره‌یی ڕێژه‌یی:- به‌ژماره‌یه‌كی راستی  ده‌وترێت ڕێژه‌یی گه‌ر هاتوو بتوانرێت به‌شێوه‌ی كه‌رتی وه‌كو <span class="process-math">\(\frac{a}{b} \)</span> بنوسرێت كاتێك هه‌ریه‌كه‌ له‌ ژماره‌كانی <span class="process-math">\(a,b\)</span> ژماره‌ی ته‌واو  بن، وه‌ مه‌رجیشه‌ <span class="process-math">\(b\ne0\)</span> .</div>
-<span class="incontext"><a href="section-title.html#p-4" class="internal">[incontext]</a></span>
+<span class="incontext"><a href="S-1-1.html#p-4" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
