--- a/knowl/p-9.html
+++ b/knowl/p-9.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">[p]</span></h3>
-<div class="para">ئەمە خۆیەتی</div>
-<span class="incontext"><a href="section-2.html#p-9" class="internal">[incontext]</a></span>
+<h4 class="heading"><span class="type">پەرەگراف</span></h4>
+<div class="para">دەتوانی وەکو نموونەی لە خوارەوە پیشاندارەوە، تەواوکاری نەخشەیەک بدۆزیتەوە، نەخشەکە دوو دراوی هەیە، یەکەم نەخشەکەیە وە دووهەم گۆڕاوەکەیە</div>
+<span class="incontext"><a href="S-1-1.html#p-9" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
