--- a/section-2.html
+++ b/section-2.html
@@ -5,7 +5,7 @@
 <!--*         https://pretextbook.org          *-->
 <!--*                                          *-->
 <!--********************************************-->
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>ئایا کۆساینی شەس دەکاتە چەند؟</title>
@@ -177,7 +177,7 @@ window.MathJax = {
 <span id="theeye" class="motioncheck"></span>eye tracking - not yet</li>
 </ol>
 </li>
-</ol></div></button><span class="treebuttons"><a class="previous-button button" href="section-title.html" title="[previous]"><span class="icon">&lt;</span><span class="name">[previous-short]</span></a><a class="up-button button" href="chapter-title.html" title="[up]"><span class="icon">^</span><span class="name">[up-short]</span></a><a class="next-button button" href="backmatter.html" title="[next]"><span class="name">[next-short]</span><span class="icon">&gt;</span></a></span><div class="searchbox"><div class="searchwidget">
+</ol></div></button><span class="treebuttons"><a class="previous-button button" href="chapter-title.html" title="[previous]"><span class="icon">&lt;</span><span class="name">[previous-short]</span></a><a class="up-button button" href="chapter-title.html" title="[up]"><span class="icon">^</span><span class="name">[up-short]</span></a><a class="next-button button" href="backmatter.html" title="[next]"><span class="name">[next-short]</span><span class="icon">&gt;</span></a></span><div class="searchbox"><div class="searchwidget">
 <input id="ptxsearch" type="text" name="terms" placeholder="Search" onchange="doSearch()"><button id="searchbutton" type="button" onclick="doSearch()">🔍</button>
 </div></div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\R}{\mathbb R}
 \newcommand{\lt}{&lt;}
@@ -190,20 +190,38 @@ window.MathJax = {
 <div id="ptx-sidebar"><nav id="ptx-toc" class="depth2"><ul class="structural">
 <li><div class="toc-item"><a href="frontmatter.html" class="internal"><span class="title">[frontmatter]</span></a></div></li>
 <li>
-<div class="toc-item"><a href="chapter-title.html" class="internal"><span class="codenumber">1</span> <span class="title">بەشی یەکەم</span></a></div>
+<div class="toc-item"><a href="C-1.html" class="internal"><span class="codenumber">1</span> <span class="title">داتاشراوە</span></a></div>
 <ul class="structural">
-<li><div class="toc-item"><a href="section-title.html" class="internal"><span class="codenumber">1.1</span> <span class="title">ژمارەیی ڕيژەیی</span></a></div></li>
-<li class="active"><div class="toc-item"><a href="section-2.html" class="internal"><span class="codenumber">1.2</span> <span class="title">ئایا کۆساینی شەس دەکاتە چەند؟</span></a></div></li>
+<li><div class="toc-item"><a href="S-1-1.html" class="internal"><span class="codenumber">1.1</span> <span class="title">بەشی یەکەم لقی یەکەمژمارەیی ڕيژەیی</span></a></div></li>
+<li><div class="toc-item"><a href="S-1-2.html" class="internal"><span class="codenumber">1.2</span> <span class="title">بەشی دووهەم لقی یەکەم</span></a></div></li>
 </ul>
+</li>
+<li>
+<div class="toc-item"><a href="C-2.html" class="internal"><span class="codenumber">2</span> <span class="title">تەواوکاری</span></a></div>
+<ul class="structural">
+<li><div class="toc-item"><a href="S-2-1.html" class="internal"><span class="codenumber">2.1</span> <span class="title">بەشی دووهەم لقی یەکەم</span></a></div></li>
+<li><div class="toc-item"><a href="S-2-2.html" class="internal"><span class="codenumber">2.2</span> <span class="title">بەشی دووهەم لقی دووهەم</span></a></div></li>
+</ul>
+</li>
+<li>
+<div class="toc-item"><a href="C-3.html" class="internal"><span class="codenumber">3</span> <span class="title">تیۆری ژمارەکان</span></a></div>
+<ul class="structural">
+<li><div class="toc-item"><a href="S-3-1.html" class="internal"><span class="codenumber">3.1</span> <span class="title">بەشی یەکەم لقی سيهەم</span></a></div></li>
+<li><div class="toc-item"><a href="S-3-2.html" class="internal"><span class="codenumber">3.2</span> <span class="title">بەشی دووهەم لقی سيهەم</span></a></div></li>
+</ul>
+</li>
+<li>
+<div class="toc-item"><a href="chapter-title.html" class="internal"><span class="codenumber">4</span> <span class="title">بەشی یەکەم</span></a></div>
+<ul class="structural"><li class="active"><div class="toc-item"><a href="section-2.html" class="internal"><span class="codenumber">4.1</span> <span class="title">ئایا کۆساینی شەس دەکاتە چەند؟</span></a></div></li></ul>
 </li>
 <li><div class="toc-item"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="section-2"><h2 class="heading hide-type">
-<span class="type">[section]</span> <span class="codenumber">1.2</span> <span class="title">ئایا کۆساینی شەس دەکاتە چەند؟</span>
+<span class="type">[section]</span> <span class="codenumber">4.1</span> <span class="title">ئایا کۆساینی شەس دەکاتە چەند؟</span>
 </h2>
 <div class="para" id="p-9">ئەمە خۆیەتی</div></section></div>
 <div class="ptx-content-footer">
-<a class="previous-button button" href="section-title.html" title="[previous]"><span class="icon">&lt;</span><span class="name">[previous-short]</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="backmatter.html" title="[next]"><span class="name">[next-short]</span><span class="icon">&gt;</span></a>
+<a class="previous-button button" href="chapter-title.html" title="[previous]"><span class="icon">&lt;</span><span class="name">[previous-short]</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><a class="next-button button" href="backmatter.html" title="[next]"><span class="name">[next-short]</span><span class="icon">&gt;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer">
