--- a/section-title.html
+++ b/section-title.html
@@ -5,7 +5,7 @@
 <!--*         https://pretextbook.org          *-->
 <!--*                                          *-->
 <!--********************************************-->
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>ژمارەیی ڕيژەیی</title>
@@ -190,23 +190,44 @@ window.MathJax = {
 <div id="ptx-sidebar"><nav id="ptx-toc" class="depth2"><ul class="structural">
 <li><div class="toc-item"><a href="frontmatter.html" class="internal"><span class="title">[frontmatter]</span></a></div></li>
 <li>
-<div class="toc-item"><a href="chapter-title.html" class="internal"><span class="codenumber">1</span> <span class="title">بەشی یەکەم</span></a></div>
+<div class="toc-item"><a href="C-1.html" class="internal"><span class="codenumber">1</span> <span class="title">داتاشراوە</span></a></div>
 <ul class="structural">
-<li class="active"><div class="toc-item"><a href="section-title.html" class="internal"><span class="codenumber">1.1</span> <span class="title">ژمارەیی ڕيژەیی</span></a></div></li>
-<li><div class="toc-item"><a href="section-2.html" class="internal"><span class="codenumber">1.2</span> <span class="title">ئایا کۆساینی شەس دەکاتە چەند؟</span></a></div></li>
+<li><div class="toc-item"><a href="S-1-1.html" class="internal"><span class="codenumber">1.1</span> <span class="title">بەشی یەکەم لقی یەکەم</span></a></div></li>
+<li><div class="toc-item"><a href="S-1-2.html" class="internal"><span class="codenumber">1.2</span> <span class="title">بەشی دووهەم لقی یەکەم</span></a></div></li>
+</ul>
+</li>
+<li>
+<div class="toc-item"><a href="C-2.html" class="internal"><span class="codenumber">2</span> <span class="title">تەواوکاری</span></a></div>
+<ul class="structural">
+<li><div class="toc-item"><a href="S-2-1.html" class="internal"><span class="codenumber">2.1</span> <span class="title">بەشی دووهەم لقی یەکەم</span></a></div></li>
+<li><div class="toc-item"><a href="S-2-2.html" class="internal"><span class="codenumber">2.2</span> <span class="title">بەشی دووهەم لقی دووهەم</span></a></div></li>
+</ul>
+</li>
+<li>
+<div class="toc-item"><a href="C-3.html" class="internal"><span class="codenumber">3</span> <span class="title">تیۆری ژمارەکان</span></a></div>
+<ul class="structural">
+<li><div class="toc-item"><a href="S-3-1.html" class="internal"><span class="codenumber">3.1</span> <span class="title">بەشی یەکەم لقی سيهەم</span></a></div></li>
+<li><div class="toc-item"><a href="S-3-2.html" class="internal"><span class="codenumber">3.2</span> <span class="title">بەشی دووهەم لقی سيهەم</span></a></div></li>
+</ul>
+</li>
+<li>
+<div class="toc-item"><a href="chapter-title.html" class="internal"><span class="codenumber">4</span> <span class="title">بەشی یەکەم</span></a></div>
+<ul class="structural">
+<li class="active"><div class="toc-item"><a href="section-title.html" class="internal"><span class="codenumber">4.1</span> <span class="title">ژمارەیی ڕيژەیی</span></a></div></li>
+<li><div class="toc-item"><a href="section-2.html" class="internal"><span class="codenumber">4.2</span> <span class="title">ئایا کۆساینی شەس دەکاتە چەند؟</span></a></div></li>
 </ul>
 </li>
 <li><div class="toc-item"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="section-title"><h2 class="heading hide-type">
-<span class="type">[section]</span> <span class="codenumber">1.1</span> <span class="title">ژمارەیی ڕيژەیی</span>
+<span class="type">[section]</span> <span class="codenumber">4.1</span> <span class="title">ژمارەیی ڕيژەیی</span>
 </h2>
 <div class="para" id="p-1">گه‌ر له‌ كۆمه‌ڵێك بیركاریزان بپرسیت  كه‌ ئایا جوانترین بیردۆزی بیركاری له‌لاتان چیه‌؟ ئه‌وا زۆرێك له‌و وه‌ڵامانه‌ی به‌رگوێت ده‌كه‌ویت بریتی ده‌بێت له‌ ناڕێژه‌ییبوونی <span class="process-math">\(\sqrt{2} \)</span>
 </div>
 <div class="para" id="p-2">كه‌له‌لایه‌ن فیساگۆرس و شوێنكه‌وتووه‌كانیه‌وه‌ سه‌لمێنراوه‌. واته‌ فیساگۆرسیه‌كان سه‌لماندیان كه‌</div>
 <span class="process-math">\(\sqrt{2}\)</span><div class="para" id="p-3">ژماره‌یه‌كی ناڕێژه‌ییه‌  . به‌لام سه‌ره‌تا ده‌بیت باس له‌وه‌ بكه‌ین كه‌ ئایا ژماره‌ی ناڕێژه‌یی چیه‌؟</div>
 <article class="theorem theorem-like" id="thm-"><h3 class="heading">
-<span class="type">[theorem]</span><span class="space"> </span><span class="codenumber">1.1.1</span><span class="period">.</span>
+<span class="type">[theorem]</span><span class="space"> </span><span class="codenumber">4.1.1</span><span class="period">.</span>
 </h3>
 <div class="para" id="p-4">. گه‌ر كه‌سێك له‌بیركاری كه‌مێك شاره‌زا نه‌بێت  و ئه‌م پێناسه‌یه‌ی سه‌ره‌وه‌ی بۆ بخوێنیته‌وه‌ ، له‌وانیه‌ واهه‌ستبكات گاڵته‌ی له‌گه‌ل ده‌كه‌یت یاخود نوكته‌ی بۆ ده‌ڵێت { ناهه‌قیشی نیه‌)  ، چونكه‌ له‌ پێناسه‌كه‌ی سه‌ره‌وه‌ هه‌ستده‌كه‌یت گه‌مه‌كردنێك هه‌یه‌ به‌ ووشه‌ { وه‌كو ئه‌وه‌ وایه‌ كه‌سێك پێناسه‌ی شتیكی بۆن ناخۆشت بۆ بكات و  بڵێت هه‌ر شتێك  بۆنی خۆش نه‌بێت ئه‌وا ناخۆشه‌ !}. به‌هه‌رحاڵ ، بۆ ئێمه‌ی بیركاریزان ئه‌م جۆره‌ پێناسانه‌ زۆر ئاسایین و له‌سه‌رجه‌م ئه‌ده‌بیاتی بیركاریدا به‌ئاشكرا بوونی هه‌یه‌ و ڕاهاتووین له‌گه‌ڵی. با بگه‌رێنه‌وه‌ بۆ پێناسه‌كه‌ كه‌ باسی ژماره‌یی  ڕێژه‌یی  مان كردووه‌، كه‌واته‌ بۆ تێگه‌یشتن له‌ ژماره‌ی ناڕێژه‌یی ده‌بێت سه‌ره‌تا باس له‌ژماره‌ی ڕێژه‌یی بكه‌یت، وه‌ هه‌ڵبه‌ت له‌ڕووی مێژوویشه‌وه‌ ئه‌مه‌ گونجاوه‌، چونكه‌ مێژووی دروستبوونی ژماره‌ی ڕێژه‌یی ده‌كه‌وێته‌ پێش مێژووی له‌دایكبوونی ژماره‌ ناڕێژه‌یه‌كان، وه‌ له‌دایكبوونه‌كه‌یشی زه‌حمه‌تی زۆری پێوه‌كێشرا ( به‌لایه‌نی كه‌مه‌وه‌ نه‌فه‌رێك له‌سه‌ر ژماره‌ ناڕێژه‌یه‌كان كوژرا). پێناسه‌ی ژماره‌یی ڕێژه‌یی:- به‌ژماره‌یه‌كی راستی  ده‌وترێت ڕێژه‌یی گه‌ر هاتوو بتوانرێت به‌شێوه‌ی كه‌رتی وه‌كو <span class="process-math">\(\frac{a}{b} \)</span> بنوسرێت كاتێك هه‌ریه‌كه‌ له‌ ژماره‌كانی <span class="process-math">\(a,b\)</span> ژماره‌ی ته‌واو  بن، وه‌ مه‌رجیشه‌ <span class="process-math">\(b\ne0\)</span> .</div></article><div class="para" id="p-5">پێناسه‌ی ژماره‌یی ناڕێژه‌یی:- به‌ژماره‌یه‌كی ڕاستی ده‌وترێت ناڕێژه‌یی گه‌ر هاتوو ڕێژه‌یی نه‌بوو له‌پێناسه‌كه‌وه‌ هه‌ستده‌كه‌یت كه‌ هه‌موو ژماره‌یه‌كی ته‌واو ژماره‌یه‌كی ڕێژه‌ییه‌، بو نموونه‌ 7- <span class="process-math">\(7\)</span> ده‌توانرێت  به‌م شێوه‌یه‌ <span class="process-math">\(\frac{-7}{1}\)</span> بنووسرێت .به‌لام به‌دڵنیایه‌وه‌ مه‌رج نیه‌ ژماره‌ی ڕێژه‌یی  ژماره‌یه‌كی ته‌واو بێت. بۆ ئه‌مه‌یش نموونه‌مان هه‌یه‌ . <span class="process-math">\(\frac{22}{7} \)</span> ژماره‌یه‌كی ڕێژه‌ییه‌ به‌لام ژماره‌یه‌كی ته‌واو نیه‌!   وه‌ ئێمه‌ی بیركاریزان ئه‌م قسه‌یه‌ی سه‌ره‌وه‌ له‌ ده‌سته‌واژه‌یه‌كدا كۆده‌كه‌ینه‌وه‌ كه‌ ده‌ڵێت ژماره‌ ته‌واوه‌كان به‌شه‌كۆمه‌له‌یه‌كه‌ له‌ ژماره‌ ڕێژه‌ییه‌كان وه‌ گه‌ر به‌شێوه‌یه‌كی فه‌رمی به‌م شێوه‌یه‌ ده‌نوسرێت <span class="process-math">\(\mathbb{Z} \subset \mathbb{Q}\)</span> .</div>
 <div class="para" id="p-6">ئێستا دوای ئه‌وه‌ی زانیمان پێناسه‌ی ژماره‌ی ناڕێژه‌یی چیه‌ كاتی ئه‌وه‌ هاتووه‌ كۆمه‌ڵێك نموونه‌ی له‌سه‌ر بخه‌ینه‌ ڕوو ، ئه‌مانه‌ی خواره‌وه‌ له‌به‌ناوبانگترین ژماره‌ ناڕێژه‌ییه‌كانن:- <span class="process-math">\(\sqrt 2\)</span> ( یان ڕه‌گی دووجای هه‌ر ژماره‌یه‌كی خۆبه‌ش ! ). <span class="process-math">\(\pi\)</span> پای یاخود ڕێژه‌ی نه‌گۆڕ كه‌ به‌نزیكی ده‌كاته‌ 3.14 <span class="process-math">\(\mathrm{e}\)</span> ژماره‌ی ئۆیله‌ر.كه‌ به‌نزیكی ده‌كاته‌ 2.71 . ئه‌م ژمارانه‌ی سه‌ره‌وه‌ هه‌موویان نارێژه‌یین. به‌لام ته‌نها باس له‌ سه‌لماندنی یه‌كه‌م  ده‌كه‌ین چونكه‌ ئه‌وانی تر كه‌مێك پێشكه‌وتوترن و پیویست به‌ زانیاری زیاتر هه‌یه‌ ، سه‌لماندنه‌كه‌ی ڕه‌گی دوو  قوتابی قوناغی ناوه‌ندیش لێیحالیده‌بێت. به‌لام دوو ژماره‌كه‌ی تر بۆ سه‌لماندنیان پێویستیمان به‌كه‌مێك میتۆدی تر ده‌بێت كه‌ زیاتر له‌ زانكۆ ده‌خوێنرێت.</div>
