--- a/knowl/p-2.html
+++ b/knowl/p-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">[p]</span></h3>
-<div class="para">كه‌له‌لایه‌ن فیساگۆرس و شوێنكه‌وتووه‌كانیه‌وه‌ سه‌لمێنراوه‌. واته‌ فیساگۆرسیه‌كان سه‌لماندیان كه‌</div>
-<span class="incontext"><a href="section-title.html#p-2" class="internal">[incontext]</a></span>
+<h3 class="heading"><span class="type">پەرەگراف</span></h3>
+<div class="para">كه‌له‌لایه‌ن فیساگۆرس و شوێنكه‌وتووه‌كانیه‌وه‌ سه‌لمێنراوه‌. واته‌ فیساگۆرسیه‌كان سه‌لماندیان كه‌ <span class="process-math">\(\sqrt{2}\)</span> ژماره‌یه‌كی ناڕێژه‌ییه‌  .</div>
+<span class="incontext"><a href="S-1-1.html#p-2" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
