--- a/knowl/p-5.html
+++ b/knowl/p-5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
@@ -11,8 +11,10 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">[p]</span></h3>
-<div class="para">پێناسه‌ی ژماره‌یی ناڕێژه‌یی:- به‌ژماره‌یه‌كی ڕاستی ده‌وترێت ناڕێژه‌یی گه‌ر هاتوو ڕێژه‌یی نه‌بوو له‌پێناسه‌كه‌وه‌ هه‌ستده‌كه‌یت كه‌ هه‌موو ژماره‌یه‌كی ته‌واو ژماره‌یه‌كی ڕێژه‌ییه‌، بو نموونه‌ 7- <span class="process-math">\(7\)</span> ده‌توانرێت  به‌م شێوه‌یه‌ <span class="process-math">\(\frac{-7}{1}\)</span> بنووسرێت .به‌لام به‌دڵنیایه‌وه‌ مه‌رج نیه‌ ژماره‌ی ڕێژه‌یی  ژماره‌یه‌كی ته‌واو بێت. بۆ ئه‌مه‌یش نموونه‌مان هه‌یه‌ . <span class="process-math">\(\frac{22}{7} \)</span> ژماره‌یه‌كی ڕێژه‌ییه‌ به‌لام ژماره‌یه‌كی ته‌واو نیه‌!   وه‌ ئێمه‌ی بیركاریزان ئه‌م قسه‌یه‌ی سه‌ره‌وه‌ له‌ ده‌سته‌واژه‌یه‌كدا كۆده‌كه‌ینه‌وه‌ كه‌ ده‌ڵێت ژماره‌ ته‌واوه‌كان به‌شه‌كۆمه‌له‌یه‌كه‌ له‌ ژماره‌ ڕێژه‌ییه‌كان وه‌ گه‌ر به‌شێوه‌یه‌كی فه‌رمی به‌م شێوه‌یه‌ ده‌نوسرێت <span class="process-math">\(\mathbb{Z} \subset \mathbb{Q}\)</span> .</div>
-<span class="incontext"><a href="section-title.html#p-5" class="internal">[incontext]</a></span>
+<h3 class="heading"><span class="type">پەرەگراف</span></h3>
+<div class="para"><article class="definition definition-like"><h3 class="heading">
+<span class="type">پێناسە</span><span class="space"> </span><span class="codenumber">1.1.2</span><span class="period">.</span>
+</h3>ژماره‌یی ناڕێژه‌یی به‌ژماره‌یه‌كی ڕاستی ده‌وترێت ناڕێژه‌یی گه‌ر هاتوو ڕێژه‌یی نه‌بوو له‌پێناسه‌كه‌وه‌ هه‌ستده‌كه‌یت كه‌ هه‌موو ژماره‌یه‌كی ته‌واو ژماره‌یه‌كی ڕێژه‌ییه‌، بو نموونه‌ 7- <span class="process-math">\(7\)</span> ده‌توانرێت  به‌م شێوه‌یه‌ <span class="process-math">\(\frac{-7}{1}\)</span> بنووسرێت .به‌لام به‌دڵنیایه‌وه‌ مه‌رج نیه‌ ژماره‌ی ڕێژه‌یی  ژماره‌یه‌كی ته‌واو بێت. بۆ ئه‌مه‌یش نموونه‌مان هه‌یه‌ . <span class="process-math">\(\frac{22}{7} \)</span> ژماره‌یه‌كی ڕێژه‌ییه‌ به‌لام ژماره‌یه‌كی ته‌واو نیه‌!   وه‌ ئێمه‌ی بیركاریزان ئه‌م قسه‌یه‌ی سه‌ره‌وه‌ له‌ ده‌سته‌واژه‌یه‌كدا كۆده‌كه‌ینه‌وه‌ كه‌ ده‌ڵێت ژماره‌ ته‌واوه‌كان به‌شه‌كۆمه‌له‌یه‌كه‌ له‌ ژماره‌ ڕێژه‌ییه‌كان وه‌ گه‌ر به‌شێوه‌یه‌كی فه‌رمی به‌م شێوه‌یه‌ ده‌نوسرێت <span class="process-math">\(\mathbb{Z} \subset \mathbb{Q}\)</span> .</article></div>
+<span class="incontext"><a href="S-1-1.html#p-5" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
