--- a/knowl/p-7.html
+++ b/knowl/p-7.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku-CKB">
+<html lang="ku-CKB" dir="rtl">
 <!--********************************************-->
 <!--*       Generated from PreTeXt source      *-->
 <!--*                                          *-->
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h3 class="heading"><span class="type">[p]</span></h3>
+<h3 class="heading"><span class="type">پەرەگراف</span></h3>
 <div class="para">بۆیه‌ ئێمه‌ لێره‌دا ته‌نها یه‌كه‌م ژماره‌ ده‌سه‌لمێنین كه‌ ناڕێژییه‌، تاوه‌كو زۆرترین خوێنه‌ر سودی ڵێوه‌ربگرێت.</div>
-<span class="incontext"><a href="section-title.html#p-7" class="internal">[incontext]</a></span>
+<span class="incontext"><a href="S-1-1.html#p-7" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
