Latest build deployed.

--- a/S-2-2.html
+++ b/S-2-2.html
@@ -292,13 +292,13 @@ eBookConfig.enable_chatcodes =  false;
 <span class="type">پێناسە</span><span class="space"> </span><span class="codenumber">2.2.1</span><span class="period">.</span>
 </h3>یه‌كبه‌دوای یه‌كی فیبانۆشی (fibonacci sequence) بریتیه‌ له‌ زنجیره‌یه‌ك له‌ ژماره‌ كه‌ هه‌ر ژماره‌یه‌ك له‌م زنجیره‌یه‌ ده‌كاته‌ كۆی دوو ژماره‌كه‌ی پێشخۆی.. له‌خواره‌وه‌ ده‌یه‌كه‌مین دانه‌كانی ئه‌م یه‌كله‌دوای یه‌كه‌ ده‌نووسین:-</article></div>
 <figure class="figure figure-like" id="figure-1"><iframe src="https://www.desmos.com/calculator/ttox1bvxku" id="desmos-natural-log" width="420" height="630"></iframe><figcaption><span class="type">وێنە</span><span class="space"> </span><span class="codenumber">2.2.2<span class="period">.</span></span><span class="space"> </span>هێڵکاری نەخشەی <span class="process-math">\(ln(x^2+5)-3\)</span></figcaption></figure><article class="exercise exercise-like" id="vector-space-dimension"><a href="" data-knowl="" class="id-ref exercise-knowl original" data-refid="hk-vector-space-dimension"><h3 class="heading">
-<span class="type">خاڵی پشکنین</span><span class="space"> </span><span class="codenumber">2.2.3</span><span class="period">.</span><span class="space"> </span><span class="title">True/False.</span>
+<span class="type">خاڵی پشکنین</span><span class="space"> </span><span class="codenumber">2.2.3</span><span class="period">.</span><span class="space"> </span><span class="title">ڕاست و چەوت.</span>
 </h3></a></article><div class="hidden-content tex2jax_ignore" id="hk-vector-space-dimension"><article class="exercise exercise-like"><div class="ptx-runestone-container"><div class="runestone"><ul data-component="multiplechoice" data-multipleanswers="false" id="vector-space-dimension">
-<div class="para" id="p-13">Every vector space has finite dimension.</div>
+<div class="para" id="p-13">هەموو سپەیسە ڕادەدارەکان رەهەندەکانیان کۆتایە.</div>
 <li data-component="answer" id="vector-space-dimension_opt_t"><p>True.</p></li>
-<li data-component="feedback" id="vector-space-dimension_opt_t"><div class="para" id="p-14">The vector space of all polynomials with finite degree has a basis, <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> which is infinte.</div></li>
+<li data-component="feedback" id="vector-space-dimension_opt_t"><div class="para" id="p-14">سپەیسی ڕادەدارەکان، رەهەندەکەیان ناکۆتایە <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> کە دیارە ناکۆتایە</div></li>
 <li data-component="answer" id="vector-space-dimension_opt_f" data-correct=""><p>False.</p></li>
-<li data-component="feedback" id="vector-space-dimension_opt_f"><div class="para" id="p-14">The vector space of all polynomials with finite degree has a basis, <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> which is infinte.</div></li>
+<li data-component="feedback" id="vector-space-dimension_opt_f"><div class="para" id="p-14">سپەیسی ڕادەدارەکان، رەهەندەکەیان ناکۆتایە <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> کە دیارە ناکۆتایە</div></li>
 </ul></div></div>
 <div class="solutions">
 <a href="" data-knowl="" class="id-ref hint-knowl original" data-refid="hk-hint-1" id="hint-1"><span class="type">یارمەتی</span><span class="period">.</span></a><div class="hidden-content tex2jax_ignore" id="hk-hint-1"><div class="hint solution-like"><div class="para" id="p-15">
