--- a/knowl/p-13.html
+++ b/knowl/p-13.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">پەرەگراف</span></h4>
-<div class="para">Every vector space has finite dimension.</div>
+<div class="para">هەموو سپەیسە ڕادەدارەکان رەهەندەکانیان کۆتایە.</div>
 <span class="incontext"><a href="S-2-2.html#p-13" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
