--- a/knowl/p-14.html
+++ b/knowl/p-14.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">پەرەگراف</span></h4>
-<div class="para">The vector space of all polynomials with finite degree has a basis, <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> which is infinte.</div>
+<div class="para">سپەیسی ڕادەدارەکان، رەهەندەکەیان ناکۆتایە <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> کە دیارە ناکۆتایە</div>
 <span class="incontext"><a href="S-2-2.html#p-14" class="internal">ناو-کۆنتێکستدا</a></span>
 </body>
 </html>
