--- a/knowl/vector-space-dimension-hidden.html
+++ b/knowl/vector-space-dimension-hidden.html
@@ -11,11 +11,11 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math"><article class="exercise exercise-like"><div class="ptx-runestone-container"><div class="runestone"><ul data-component="multiplechoice" data-multipleanswers="false" id="vector-space-dimension">
-<div class="para" id="p-13">Every vector space has finite dimension.</div>
+<div class="para" id="p-13">هەموو سپەیسە ڕادەدارەکان رەهەندەکانیان کۆتایە.</div>
 <li data-component="answer" id="vector-space-dimension_opt_t"><p>True.</p></li>
-<li data-component="feedback" id="vector-space-dimension_opt_t"><div class="para" id="p-14">The vector space of all polynomials with finite degree has a basis, <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> which is infinte.</div></li>
+<li data-component="feedback" id="vector-space-dimension_opt_t"><div class="para" id="p-14">سپەیسی ڕادەدارەکان، رەهەندەکەیان ناکۆتایە <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> کە دیارە ناکۆتایە</div></li>
 <li data-component="answer" id="vector-space-dimension_opt_f" data-correct=""><p>False.</p></li>
-<li data-component="feedback" id="vector-space-dimension_opt_f"><div class="para" id="p-14">The vector space of all polynomials with finite degree has a basis, <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> which is infinte.</div></li>
+<li data-component="feedback" id="vector-space-dimension_opt_f"><div class="para" id="p-14">سپەیسی ڕادەدارەکان، رەهەندەکەیان ناکۆتایە <span class="process-math">\(B = \{1,x,x^2,x^3,\dots\}\text{,}\)</span> کە دیارە ناکۆتایە</div></li>
 </ul></div></div>
 <div class="solutions"><a href="" class="hint-knowl original" data-knowl="./knowl/hint-1-hidden.html" title="یارمەتی 2.2.3.1"><span class="type">یارمەتی</span><span class="period">.</span></a></div></article></body>
 </html>
